# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "api-worker"
version = "0.1.0"
authors = ["Fuwn <contact@fuwn.me>"]
edition = "2021"
description = ""
readme = "README.md"
homepage = "https://github.com/senpy-club/api-worker"
repository = "https://github.com/senpy-club/api-worker"
license = "GPL-3.0-only"
keywords = ["rust", "anime", "senpy"]
categories = []
publish = false

[dependencies]
# Serialization
serde = "1.0.125"
serde_derive = "1.0.125"

# Utility
rand = "0.8.3"
dotenv = "0.15.0"

# Web
actix-web = { version = "3.3.2", features = ["rustls"] }
qstring = "0.7.2"
actix-cors = "0.5.4"
actix-ratelimit = "0.3.1"
