# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "api-worker"
version = "0.2.1"
authors = ["Fuwn <fuwnzy@gmail.com>"]
edition = "2021"
description = "API (as a Cloudflare Worker!)"
readme = "README.rst"
homepage = "https://github.com/senpy-club/api-worker"
repository = "https://github.com/senpy-club/api-worker"
license = "GPL-3.0-only"
keywords = ["rust", "anime", "senpy"]
categories = ["web-programming", "web-programming::http-server"]
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

# Slower builds, faster executables
[profile.release]
lto = "fat"
codegen-units = 1
# Optimize for size
opt-level = "s"

[dependencies]
# Serialization
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"

# Utility
getrandom = { version = "0.2.5", features = ["js"] }
rand = "0.8.5"
dotenv = "0.15.0"

# Worker
worker = "0.0.9"

# Web
reqwest = { version = "0.11.10", features = ["json"] }

# Allocator
wee_alloc = "0.4.5"

[build-dependencies]
# Build variables
vergen = "7.0.0"

# `Result`
anyhow = "1.0.56"
